--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-  <link rel="stylesheet" href="/profile-card-component-main/normalize.css">
-  <link rel="stylesheet" href="/profile-card-component-main/main.css">
+  <link rel="stylesheet" href="/profile-card-component-main/css/normalize.css">
+  <link rel="stylesheet" href="/profile-card-component-main/css/main.css">
   <title>Frontend Mentor | Profile card component</title>
 </head>
 <body>
@@ -16,23 +16,29 @@
       </div>
       <div class="info-card">
         <div class="info-top">
-          <img src="/profile-card-component-main/images/Captura de pantalla 2020-11-22 233331.png" alt="Img User">
-          <p class = "name"> Alejo Hernandez <span>19</span></p>
-          <p class ="location">De Ailin </p>
+          <img src="/profile-card-component-main/images/image-victor.jpg" alt="Img User">
+          <p class = "name"> Victor Crest <span>26</span></p>
+          <p class ="location">London </p>
         </div>
         <div class="info-bottom">
           <div class="tag">
-            <p>0K <br><span>Followers</span></p>
+            <p>80K <br><span>Followers</span></p>
           </div>
           <div class="tag">
-            <p> 0K <br><span>Likes</span></p>
+            <p> 80.3K <br><span>Likes</span></p>
           </div>
           <div class="tag">
-            <p>0K <br><span>Photos</span></p>
+            <p>1.4K <br><span>Photos</span></p>
           </div>
         </div>
       </div>
     </div>
   </main>
+
+  <div class="attribution">
+    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+    Coded by <a href="#">Brayan Carreño</a>.
+  </div>
+
 </body>
 </html>
