--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-  <link rel="stylesheet" href="/profile-card-component-main/css/normalize.css">
-  <link rel="stylesheet" href="/profile-card-component-main/css/main.css">
+  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/main.css">
   <title>Frontend Mentor | Profile card component</title>
 </head>
 <body>
