--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
   <main class="profile-card">
     <div class="card">
       <div class="img-top">
-        <img src="/profile-card-component-main/images/bg-pattern-card.svg" alt="Img Bg Top">
+        <img src="images/bg-pattern-card.svg" alt="Img Bg Top">
       </div>
       <div class="info-card">
         <div class="info-top">
-          <img src="/profile-card-component-main/images/image-victor.jpg" alt="Img User">
+          <img src="images/image-victor.jpg" alt="Img User">
           <p class = "name"> Victor Crest <span>26</span></p>
           <p class ="location">London </p>
         </div>
